@@ -7,12 +7,15 @@ import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.Assert;
-import sun.misc.BASE64Decoder;
 
-import java.io.*;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyStore;
+import java.util.Base64;
 
 /**
  * Created by tomerd on 19/01/2016.
@@ -171,6 +174,8 @@ public class PxGridHandler {
 			KeyStore ks = KeyStore.getInstance("JKS");
 			ks.load(new FileInputStream(filename), password.toCharArray());
 		} catch (Exception e) {
+			String s = e.getMessage();
+			s += "";
 			return false;
 		}
 
@@ -228,10 +233,8 @@ public class PxGridHandler {
 	}
 
 	private String saveKey(String base64Key, String fileName) throws IOException {
-		byte[] keyBytes;
 
-		BASE64Decoder decoder = new BASE64Decoder();
-		keyBytes = decoder.decodeBuffer(base64Key);
+		byte[] keyBytes = Base64.getDecoder().decode(base64Key);
 		try (OutputStream stream = new FileOutputStream(fileName)) {
 			stream.write(keyBytes);
 		}
